--- a/Index.html
+++ b/Index.html
@@ -105,9 +105,9 @@
       <div class="project-card">
         <div class="project-header">
           <div class="flex justify-between items-center mb-4">
-            <h3 class="text-xl font-semibold">Project 1</h3>
+            <h3 class="text-xl font-semibold">Documanager App</h3>
             <div class="flex gap-3">
-              <a href="#" class="text-slate-500 hover:text-accent transition-colors">
+              <a href="https://github.com/MeethaWASABI/documanager-app" class="text-slate-500 hover:text-accent transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
               </a>
               <a href="#" class="text-slate-500 hover:text-accent transition-colors">
@@ -115,13 +115,15 @@
               </a>
             </div>
           </div>
-          <p class="text-slate-500 dark:text-slate-400 mb-6">A brief description of what this project is about and the technologies used.</p>
+          <p class="text-slate-500 dark:text-slate-400 mb-6">A minimal, secure document management system that allows users to upload, organize, search, and manage files with version control and role-based access.</p>
         </div>
         <div class="project-footer">
           <div class="flex flex-wrap gap-2">
             <span class="tech-tag">React</span>
             <span class="tech-tag">Node.js</span>
             <span class="tech-tag">MongoDB</span>
+            <span class="tech-tag">AWS</span>
+
           </div>
         </div>
       </div>
@@ -129,9 +131,9 @@
       <div class="project-card">
         <div class="project-header">
           <div class="flex justify-between items-center mb-4">
-            <h3 class="text-xl font-semibold">Project 2</h3>
+            <h3 class="text-xl font-semibold">Shortening.io</>
             <div class="flex gap-3">
-              <a href="#" class="text-slate-500 hover:text-accent transition-colors">
+              <a href="https://github.com/MeethaWASABI/shortening.io" class="text-slate-500 hover:text-accent transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
               </a>
               <a href="#" class="text-slate-500 hover:text-accent transition-colors">
@@ -139,13 +141,13 @@
               </a>
             </div>
           </div>
-          <p class="text-slate-500 dark:text-slate-400 mb-6">A brief description of what this project is about and the technologies used.</p>
+          <p class="text-slate-500 dark:text-slate-400 mb-6">A lightweight URL shortening service that generates custom short links with analytics tracking, expiration options, and QR code support.</p>
         </div>
         <div class="project-footer">
           <div class="flex flex-wrap gap-2">
             <span class="tech-tag">Next.js</span>
             <span class="tech-tag">TailwindCSS</span>
-            <span class="tech-tag">AWS</span>
+            <span class="tech-tag">MongoDB</span>
           </div>
         </div>
       </div>
@@ -164,15 +166,21 @@
       Say Hello
     </a>
     <div class="flex justify-center gap-6 mt-16">
-      <a href="#" class="text-slate-500 hover:text-accent transition-colors">
+      <a href="https://github.com/MeethaWASABI" class="text-slate-500 hover:text-accent transition-colors">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
       </a>
-      <a href="#" class="text-slate-500 hover:text-accent transition-colors">
+      <a href="https://www.linkedin.com/in/abhignanmajumder" class="text-slate-500 hover:text-accent transition-colors">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
       </a>
-      <a href="#" class="text-slate-500 hover:text-accent transition-colors">
+      <a href="https://x.com/MeethaWasabi" class="text-slate-500 hover:text-accent transition-colors">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
       </a>
+      <a href="https://www.reddit.com/user/Senior_Friendship756/" target="_blank" class="text-slate-500 hover:text-accent transition-colors">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 512 512" fill="currentColor">
+          <path d="M440.5 215.7c-13.6 0-26 5.5-35.1 14.3-33.4-23.8-78.6-39.1-128.6-41.1l26.2-83.2 72.1 16.9c0 18.8 15.2 33.9 33.9 33.9 18.8 0 33.9-15.2 33.9-33.9s-15.2-33.9-33.9-33.9c-13.5 0-25.2 8-30.7 19.5l-81.8-19.2c-4.1-1-8.3 1.2-9.5 5.2l-29.4 93.3c-50.5 2-96.4 17.5-130.2 41.8-9-9-21.6-14.7-35.4-14.7-55.4 0-73.5 73.6-22.7 101.3-2 6.6-3.1 13.5-3.1 20.5 0 62.9 74.4 113.9 166 113.9 91.5 0 166-51 166-113.9 0-6.4-1-12.5-2.7-18.5 52.2-26.7 35.5-103.3-20.2-103.3zM160.4 317.6c0-13.5 11-24.5 24.5-24.5s24.5 11 24.5 24.5c0 13.5-11 24.5-24.5 24.5s-24.5-11-24.5-24.5zm143.8 61.7c-19.3 19.3-73.9 19.8-94.2 0-5.1-5.1-5.1-13.3 0-18.4s13.3-5.1 18.4 0c10.9 10.9 51.1 11.3 62.6 0 5.1-5.1 13.3-5.1 18.4 0 5.1 5.2 5.1 13.4-.2 18.4zm6.2-37.2c-13.5 0-24.5-11-24.5-24.5 0-13.5 11-24.5 24.5-24.5s24.5 11 24.5 24.5c.1 13.5-11 24.5-24.5 24.5z"/>
+        </svg>
+      </a>
+      
     </div>
   </section>
 
