--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
       <p class="max-w-2xl mx-auto text-slate-500 dark:text-slate-500 mb-10 animate-fade-in delay-200">
         I build exceptional digital experiences with modern web technologies and cloud infrastructure.
       </p>
-      <a href="https://docs.google.com/document/d/1wKE3R5cDs4bJWQ3T5XBdMsIaEEvFpA5j74JKQpSa2E8/edit?usp=sharing" 
+      <a href="https://docs.google.com/document/d/1V5C12ntkCCs66l3Bs_rV1iMqkYlT4S6PXaO4-2AoJ4w/edit?tab=t.0" 
          class="inline-block px-8 py-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-colors animate-fade-in delay-300"
          download="Abhignan_Resume.pdf">
         Download Resume
